# RKballistic

./: .gitignore  ExampleRK4.ipynb  Manifest.in  README.md  pyproject.toml  setup.py
RKballistic/: __init__.py  ivp_solver.py  rk4.py
tests/: test_trajectory_rk4.py
